--- a/restex/src/main/resources/application.properties
+++ b/restex/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=restex
 
 # spring.datasource.url=jdbc:h2:mem:testdb
-# ?? C:\user\????\test.mv.db
+# 기본 디렉터리 C:\user\유저명\test.mv.db
 spring.datasource.url=jdbc:h2:~/test 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-# http://localhost:8080/h2-console ???? ????
+# http://localhost:8080/h2-console 로 확인 가능
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
