--- a/restex/src/main/resources/application.properties
+++ b/restex/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
 mybatis.mapper-locations=mappers/*.xml
+
+# H2 데이터베이스 사용하는 경우
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
