--- a/restex/src/main/resources/application.properties
+++ b/restex/src/main/resources/application.properties
@@ -14,3 +14,7 @@ mybatis.mapper-locations=mappers/*.xml
 
 # H2 데이터베이스 사용하는 경우
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# 로깅 레벨 설정 (테스트 중 필요할 경우)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
